--- a/app/components/Navbar.module.css
+++ b/app/components/Navbar.module.css
@@ -8,6 +8,12 @@
    align-items: center;
 }
 
+.logout {
+   align-self: flex-start;
+   margin-top: 1.5em;
+   margin-left: 1.5em;
+}
+
 .ul {
    margin-top: 100px;
 }
