--- a/app/components/Navbar.module.css
+++ b/app/components/Navbar.module.css
@@ -5,7 +5,8 @@
    min-width: 15vw;
    background-color: white;
    border-right: 2px solid lightgray;
-   align-items: center;
+   /* align-items: center; */
+   padding: 0 0.75rem 0 0.5rem;
 }
 
 .navBarHeader {
@@ -28,7 +29,7 @@
    color: black;
    border-radius: 5px;
    padding: 8px;
-   padding-right: 1em;
+   padding-right: 1.5em;
    margin: 5px;
    display: flex;
    align-items: center;
