--- a/app/components/dashboard.module.css
+++ b/app/components/dashboard.module.css
@@ -1,5 +1,5 @@
 .dashboardWrapper {
-   max-height: 100%;
+   max-height: 100vh;
    margin: 1.5rem;
    display: flex;
    flex-direction: column;
@@ -11,6 +11,7 @@
    display: flex;
    justify-content: space-between;
    /* align-items: center; */
+   margin: 0;
 }
 
 .dashboardHeaderBar {
@@ -32,21 +33,22 @@
 }
 
 .dashboard {
-   width: 100%;
-   height: 100%;
+   width: calc(100vw - 15vw - 3rem);
+   /* height: 100%; */
+   height: calc(100vh - 10vh - 4.5rem); /* 10vh for header + 1.5rem wrapper top margin + 1.5rem wrapper bottom margin + 1.5rem for top margin*/
 
    display: grid;
-   grid-template-columns: repeat(6, 1fr);
-   grid-template-rows: repeat(4, 1fr);
+   grid-template-columns: repeat(6, minmax(auto, 1fr));
+   grid-template-rows: repeat(4, minmax(auto, 1fr));
    grid-gap: 1rem;
 
    margin-top: 1.5rem;
 
    grid-template-areas:
-      'card-1 card-1 card-2 card-2 card-2 card-2 card-5'
-      'card-1 card-1 card-2 card-2 card-2 card-2 card-5'
-      'card-3 card-3 card-3 card-3 card-4 card-4 card-5'
-      'card-3 card-3 card-3 card-3 card-4 card-4 card-6';
+      'card-1 card-1 card-2 card-2 card-2 card-5'
+      'card-1 card-1 card-2 card-2 card-2 card-5'
+      'card-3 card-3 card-3 card-4 card-4 card-5'
+      'card-3 card-3 card-3 card-4 card-4 card-6';
 
    /* background-color: #485473; */
 }
@@ -61,6 +63,10 @@
 
 .cardTitle {
    font-size: 28px;
+}
+
+.cardText {
+   font-size: 6px;
 }
 
 .card-1 {
